--- a/kubernetes-manifests/balance-reader.yaml
+++ b/kubernetes-manifests/balance-reader.yaml
@@ -12,21 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: serving.knative.dev/v1
+kind: Service
 metadata:
   name: balancereader
+  namespace: boakn
+  labels:
+    serving.knative.dev/visibility: cluster-local
 spec:
-  selector:
-    matchLabels:
-      app: balancereader
   template:
-    metadata:
-      labels:
-        app: balancereader
     spec:
       serviceAccountName: default
-      terminationGracePeriodSeconds: 5
+      # terminationGracePeriodSeconds: 5
       containers:
       - name: balancereader
         image: gcr.io/bank-of-anthos/balancereader:v0.3.0
@@ -37,8 +34,8 @@ spec:
         env:
         - name: VERSION
           value: "v0.3.0"
-        - name: PORT
-          value: "8080"
+        # - name: PORT
+        #   value: "8080"
         # toggle Cloud Trace export
         - name: ENABLE_TRACING
           value: "true"
@@ -56,9 +53,7 @@ spec:
         - name: LOG_LEVEL
           value: "info"
         - name: NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
+          value: "boakn"
         envFrom:
         - configMapRef:
             name: environment-config
@@ -75,14 +70,15 @@ spec:
         readinessProbe:
           httpGet:
             path: /ready
-            port: 8080
+            # port: 8080
           initialDelaySeconds: 60
           periodSeconds: 5
           timeoutSeconds: 10
+          failureThreshold: 10
         livenessProbe:
           httpGet:
             path: /healthy
-            port: 8080
+            # port: 8080
           initialDelaySeconds: 120
           periodSeconds: 5
           timeoutSeconds: 10
@@ -93,16 +89,3 @@ spec:
           items:
           - key: jwtRS256.key.pub
             path: publickey
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: balancereader
-spec:
-  type: ClusterIP
-  selector:
-    app: balancereader
-  ports:
-  - name: http
-    port: 8080
-    targetPort: 8080
