--- a/kubernetes-manifests/config.yaml
+++ b/kubernetes-manifests/config.yaml
@@ -16,6 +16,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: environment-config
+  namespace: boakn
 data:
   LOCAL_ROUTING_NUM: "883745000"
   PUB_KEY_PATH: "/root/.ssh/publickey"
@@ -24,17 +25,19 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: service-api-config
+  namespace: boakn
 data:
-  TRANSACTIONS_API_ADDR: "ledgerwriter:8080"
-  BALANCES_API_ADDR: "balancereader:8080"
-  HISTORY_API_ADDR: "transactionhistory:8080"
-  CONTACTS_API_ADDR: "contacts:8080"
-  USERSERVICE_API_ADDR: "userservice:8080"
+  TRANSACTIONS_API_ADDR: "ledgerwriter.boakn.svc.cluster.local"
+  BALANCES_API_ADDR: "balancereader.boakn.svc.cluster.local"
+  HISTORY_API_ADDR: "transactionhistory.boakn.svc.cluster.local"
+  CONTACTS_API_ADDR: "contacts.boakn.svc.cluster.local"
+  USERSERVICE_API_ADDR: "userservice.boakn.svc.cluster.local"
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: demo-data-config
+  namespace: boakn
 data:
   USE_DEMO_DATA: "True"
   DEMO_LOGIN_USERNAME: "testuser"
