--- a/kubernetes-manifests/loadgenerator.yaml
+++ b/kubernetes-manifests/loadgenerator.yaml
@@ -11,25 +11,25 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-apiVersion: apps/v1
-kind: Deployment
+
+apiVersion: serving.knative.dev/v1
+kind: Service
 metadata:
   name: loadgenerator
+  namespace: boakn
+  labels:
+    serving.knative.dev/visibility: cluster-local
 spec:
-  selector:
-    matchLabels:
-      app: loadgenerator
-  replicas: 1
+  # replicas: 1
   template:
     metadata:
-      labels:
-        app: loadgenerator
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
+        autoscaling.knative.dev/minScale: "1" #added
     spec:
       serviceAccountName: default
-      terminationGracePeriodSeconds: 5
-      restartPolicy: Always
+      # terminationGracePeriodSeconds: 5
+      # restartPolicy: Always
       containers:
       - name: loadgenerator
         image: gcr.io/bank-of-anthos/loadgenerator:v0.3.0
