--- a/kubernetes-manifests/userservice.yaml
+++ b/kubernetes-manifests/userservice.yaml
@@ -12,21 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: serving.knative.dev/v1
+kind: Service
 metadata:
   name: userservice
+  namespace: boakn
+  labels:
+    serving.knative.dev/visibility: cluster-local
 spec:
-  selector:
-    matchLabels:
-      app: userservice
   template:
-    metadata:
-      labels:
-        app: userservice
     spec:
       serviceAccountName: default
-      terminationGracePeriodSeconds: 5
+      # terminationGracePeriodSeconds: 5
       containers:
       - name: userservice
         image: gcr.io/bank-of-anthos/userservice:v0.3.0
@@ -34,14 +31,14 @@ spec:
         - name: keys
           mountPath: "/root/.ssh"
           readOnly: true
-        ports:
-        - name: http-server
-          containerPort: 8080
+        # ports:
+        # - name: http-server
+        #   containerPort: 8080
         env:
         - name: VERSION
           value: "v0.3.0"
-        - name: PORT
-          value: "8080"
+        # - name: PORT
+        #   value: "8080"
         - name: ENABLE_TRACING
           value: "true"
         - name: TOKEN_EXPIRY_SECONDS
@@ -59,10 +56,11 @@ spec:
         readinessProbe:
           httpGet:
             path: /ready
-            port: 8080
+            # port: 8080
           initialDelaySeconds: 10
           periodSeconds: 5
           timeoutSeconds: 10
+          failureThreshold: 10
         resources:
           requests:
             cpu: 100m
@@ -79,18 +77,3 @@ spec:
             path: privatekey
           - key: jwtRS256.key.pub
             path: publickey
-
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: userservice
-spec:
-  type: ClusterIP
-  selector:
-    app: userservice
-  ports:
-  - name: http
-    port: 8080
-    targetPort: 8080
