--- a/src/ledgermonolith/kubernetes-manifests/userservice.yaml
+++ b/src/ledgermonolith/kubernetes-manifests/userservice.yaml
@@ -31,7 +31,7 @@ spec:
         image: gcr.io/bank-of-anthos/userservice:latest
         volumeMounts:
         - name: keys
-          mountPath: "/root/.ssh"
+          mountPath: "/var/.ssh"
           readOnly: true
         ports:
         - name: http-server
@@ -44,7 +44,7 @@ spec:
         - name: TOKEN_EXPIRY_SECONDS
           value: "3600"
         - name: PRIV_KEY_PATH
-          value: "/root/.ssh/privatekey"
+          value: "/var/.ssh/privatekey"
         # Valid levels are debug, info, warning, error, critical. If no valid level is set, gunicorn will default to info.
         - name: LOG_LEVEL
           value: "info"
