--- a/kubernetes-manifests/config.yaml
+++ b/kubernetes-manifests/config.yaml
@@ -16,16 +16,14 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: environment-config
-  namespace: boakn
 data:
   LOCAL_ROUTING_NUM: "883745000"
-  PUB_KEY_PATH: "/root/.ssh/publickey"
+  PUB_KEY_PATH: "/var/.ssh/publickey"
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: service-api-config
-  namespace: boakn
 data:
   TRANSACTIONS_API_ADDR: "ledgerwriter.boakn.svc.cluster.local"
   BALANCES_API_ADDR: "balancereader.boakn.svc.cluster.local"
@@ -37,7 +35,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: demo-data-config
-  namespace: boakn
 data:
   USE_DEMO_DATA: "True"
   DEMO_LOGIN_USERNAME: "testuser"
