--- a/kubernetes-manifests/frontend.yaml
+++ b/kubernetes-manifests/frontend.yaml
@@ -16,7 +16,6 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: frontend
-  namespace: boakn
 spec:
   template:
     spec:
@@ -24,10 +23,10 @@ spec:
       # terminationGracePeriodSeconds: 5
       containers:
       - name: front
-        image: gcr.io/rafagnin/frontend:latest # TODO: set to fixed build revision
+        image: us.gcr.io/rafagnin/bank-of-anthos/frontend:latest # TODO: set to fixed build revision
         volumeMounts:
         - name: publickey
-          mountPath: "/root/.ssh"
+          mountPath: "/var/.ssh"
           readOnly: true
         env:
         - name: VERSION
@@ -78,7 +77,3 @@ spec:
           items:
           - key: jwtRS256.key.pub
             path: publickey
-    traffic:
-      - latestRevision: true
-        percent: 100
-            
