--- a/kubernetes-manifests/loadgenerator.yaml
+++ b/kubernetes-manifests/loadgenerator.yaml
@@ -16,7 +16,6 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: loadgenerator
-  namespace: boakn
   labels:
     serving.knative.dev/visibility: cluster-local
 spec:
@@ -25,7 +24,7 @@ spec:
     metadata:
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
-        autoscaling.knative.dev/minScale: "1" #added
+        autoscaling.knative.dev/minScale: "1"
     spec:
       serviceAccountName: default
       # terminationGracePeriodSeconds: 5
