--- a/src/ledgermonolith/kubernetes-manifests/frontend.yaml
+++ b/src/ledgermonolith/kubernetes-manifests/frontend.yaml
@@ -31,7 +31,7 @@ spec:
         image: gcr.io/bank-of-anthos/frontend:latest
         volumeMounts:
         - name: publickey
-          mountPath: "/root/.ssh"
+          mountPath: "/var/.ssh"
           readOnly: true
         env:
         - name: VERSION
