--- a/kubernetes-manifests/ledger-writer.yaml
+++ b/kubernetes-manifests/ledger-writer.yaml
@@ -49,8 +49,8 @@ spec:
         # service level override of log level
         - name: LOG_LEVEL
           value: "info"
-        - name: NAMESPACE
-          value: "boakn"
+        # - name: NAMESPACE
+        #   value: "default"
         envFrom:
         - configMapRef:
             name: environment-config
